Add mysql service

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.dll
 *.so
 *.dylib
+# .env # <--------- For example, this file is displayed. But in a real situation it should be hidden
+.vscode
+main.bin
 
 # Test binary, built with `go test -c`
 *.test
@@ -12,4 +15,4 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor
